# AOC2023

./: .gitignore  README.md  makeday.sh
Day01/: Day01.cabal  Part1.hs
Day01/app/: Part2.hs
Day02/: Day02.cabal  Part2.hs
Day02/app/: Part1.hs
Day03/: Day03.cabal  Part1.hs  Part2.hs
Day04/: Day04.cabal  Part1.hs  Part2.hs
Day05/: Day05.cabal  Part1.hs  Part2.hs
Day06/: Day06.cabal  Part1.hs  Part2.hs
Day07/: Day07.cabal  Part1.hs  Part2.hs
Day08/: Day08.cabal  Part1.hs  Part2.hs
Day09/: Day09.cabal  Part1.hs  Part2.hs
Day10/: Day10.cabal  Part1.hs  Part2.hs
Template/: Template.cabal  Template.hs
