cabal-version: 2.4
name: AOCYearDay
version: 0.1.0.0

author: olligobber
maintainer: sirolligobbervii@yahoo.com.au

common shared-properties
	default-language: Haskell2010
	ghc-options:
		-Weverything
		-Wno-implicit-prelude
		-Wno-missed-specialisations
		-Wno-all-missed-specialisations
		-Wno-missing-import-lists
		-Wno-unsafe
		-Wno-safe
		-Wno-missing-exported-signatures
		-Wno-missing-safe-haskell-mode
		-Wno-missing-deriving-strategies
		-Wno-prepositive-qualified-module
		-Wno-tabs

executable Part1
	import: shared-properties
	main-is: Part1.hs

	build-depends:
		  base ^>= 4.17
		-- , split ^>= 0.2.4
		-- , text ^>= 2.1
		-- , containers ^>= 0.7
		-- , mtl ^>= 2.2
		-- , parsec ^>= 3.1
		-- , fingertree ^>= 0.1.5
	default-language: Haskell2010

executable Part2
	import: shared-properties
	main-is: Part2.hs

	build-depends:
		  base ^>= 4.17
		-- , split ^>= 0.2.4
		-- , text ^>= 2.1
		-- , containers ^>= 0.7
		-- , mtl ^>= 2.2
		-- , parsec ^>= 3.1
		-- , fingertree ^>= 0.1.5
	default-language: Haskell2010